--- a/src/app/pages/loguear/loguear.page.html
+++ b/src/app/pages/loguear/loguear.page.html
@@ -18,7 +18,7 @@
       
 
       <div class="btns">
-        <ion-button color="dark" fill="solid" shape="round" (click)="login()" >Ingresar</ion-button>
+        <ion-button color="dark" fill="solid" shape="round" (click)="loguear()" >Ingresar</ion-button>
       </div>
 
       <div class="tag">
