--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
@@ -5,9 +5,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">dashboard</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h1>Hola 2</h1>
 </ion-content>
