--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -5,5 +5,20 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h1>Hola</h1>
+  <ion-tabs>
+    <ion-tab-bar>
+      <ion-tab-button routerLink="/historial" tab="time">
+        <ion-icon name="time"></ion-icon>
+        Historial
+      </ion-tab-button>
+      <ion-tab-button tab="home">
+        <ion-icon name="home"></ion-icon>
+        Inicio
+      </ion-tab-button>
+      <ion-tab-button routerLink="/perfil" tab="person">
+        <ion-icon name="person"></ion-icon>
+        Perfil
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
