--- a/src/app/pages/menu/perfil/perfil.page.html
+++ b/src/app/pages/menu/perfil/perfil.page.html
@@ -15,7 +15,7 @@
       </ion-avatar>
     </ion-col>
       <ion-col>
-        <ion-label class="namePerfil">Aqui nombre de usuario</ion-label>
+        <ion-label class="namePerfil"> hola</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
