--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -10,11 +10,7 @@
     <p>Regístrate como conductor o pasajero para comenzar a compartir viajes con tus compañeros.</p>
   </div>
 
-  <!-- Iconos Representativos -->
-  <div class="icon-container">
-    <ion-icon name="car-sport" style="font-size: 60px; color: #FFC72B;"></ion-icon>
-    <ion-icon name="person" style="font-size: 60px; color: #FFC72B;"></ion-icon>
-  </div>
+  <img alt="Silhouette of mountains" src="assets/pok-avatar/avatar.png"/>
 
   <!-- Tarjeta Informativa o Promocional -->
   <ion-card>
