--- a/src/app/pages/screenplash/screenplash.page.html
+++ b/src/app/pages/screenplash/screenplash.page.html
@@ -3,7 +3,7 @@
 
   <div class="center-content">
     <div class="logo-container">
-      <img src="/assets/icon/wallpaper.png" alt="">
+      <img src="/assets/pok-avatar/tellevoapp-logo.png" alt="">
       <ion-spinner name="crescent"></ion-spinner>
     </div>
   </div>
