--- a/src/app/pages/menu/historial/historial.page.html
+++ b/src/app/pages/menu/historial/historial.page.html
@@ -8,24 +8,44 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-segment [(ngModel)]="selectedSegment" value="default">
-    <ion-segment-button value="default">
-      <ion-label>Conductor</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="segment">
-      <ion-label>Pasajero</ion-label>
-    </ion-segment-button>
-  </ion-segment>
+  <ion-content color="light">
+    <ion-list [inset]="true">
 
-  <div *ngIf="selectedSegment === 'default'">
-    <!-- Contenido para Conductor -->
-    <h2>Información del Conductor</h2>
-    <p>Aquí va toda la información relacionada con el conductor.</p>
-  </div>
+      <ion-item>
+        <ion-avatar>
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+        <ion-label>Pokémon Yellow</ion-label>
+      </ion-item>
 
-  <div *ngIf="selectedSegment === 'segment'">
-    <!-- Contenido para Pasajero -->
-    <h2>Información del Pasajero</h2>
-    <p>Aquí va toda la información relacionada con el pasajero.</p>
-  </div>
+      <ion-item>
+        <ion-avatar>
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+        <ion-label>Mega Man X</ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-avatar>
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+        <ion-label>The Legend of Zelda</ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-avatar>
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+        <ion-label>Pac-Man</ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-avatar>
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+        <ion-label>Super Mario World</ion-label>
+      </ion-item>
+
+    </ion-list>
+  </ion-content>
 </ion-content>
