--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -9,7 +9,7 @@
     <h2>Bienvenido a TeLlevoAPP</h2>
     <p>Regístrate como conductor o pasajero para comenzar a compartir viajes con tus compañeros.</p>
   </div>
-
+  <h1>ajajjaajajajajjajaj</h1>
   <img alt="Silhouette of mountains" src="assets/pok-avatar/avatar.png"/>
 
   <!-- Tarjeta Informativa o Promocional -->
