--- a/src/app/pages/menu/historial/historial.page.html
+++ b/src/app/pages/menu/historial/historial.page.html
@@ -13,23 +13,23 @@
 
       <ion-item>
         <ion-avatar>
-          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          <img alt="Silhouette of a person's head" src="assets/pok-avatar/charmander.png" />
         </ion-avatar>
-        <ion-label>Pokémon Yellow</ion-label>
+        <ion-label>Ignacio Catalán</ion-label>
       </ion-item>
 
       <ion-item>
         <ion-avatar>
-          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          <img alt="Silhouette of a person's head" src="assets/pok-avatar/snorlax.png" />
         </ion-avatar>
-        <ion-label>Mega Man X</ion-label>
+        <ion-label>Sebastián Orellana</ion-label>
       </ion-item>
 
       <ion-item>
         <ion-avatar>
-          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          <img alt="Silhouette of a person's head" src="assets/pok-avatar/pikachu.png" />
         </ion-avatar>
-        <ion-label>The Legend of Zelda</ion-label>
+        <ion-label>Benjamín Ortega</ion-label>
       </ion-item>
 
       <ion-item>
