--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>dashboard</ion-title>
+    <ion-title>Pasajero</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,9 +11,9 @@
         <ion-icon name="time"></ion-icon>
         Historial
       </ion-tab-button>
-      <ion-tab-button tab="home">
-        <ion-icon name="home"></ion-icon>
-        Inicio
+      <ion-tab-button tab="qr">
+        <ion-icon name="qr-code-outline"></ion-icon>
+        QR
       </ion-tab-button>
       <ion-tab-button routerLink="/perfil" tab="person">
         <ion-icon name="person"></ion-icon>
