--- a/src/app/pages/menu/perfil/perfil.page.html
+++ b/src/app/pages/menu/perfil/perfil.page.html
@@ -1,21 +1,28 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaulHref="home"></ion-back-button>
+      <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Tu Perfil</ion-title>
+    <ion-buttons slot="end">
+      <ion-button expand="short" color="danger" (click)="cerrarSesion()">
+        <ion-icon name="log-out"></ion-icon>
+        Salir
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col><ion-avatar class="avatar">
-        <img alt="Tu imagen de perfil" src="assets/Avatar/Avatar-Perfil.jpeg" />
-      </ion-avatar>
-    </ion-col>
       <ion-col>
-        <ion-label class="namePerfil"> hola</ion-label>
+        <ion-avatar class="avatar">
+          <img alt="Tu imagen de perfil" src="assets/Avatar/Avatar-Perfil.jpeg" />
+        </ion-avatar>
+      </ion-col>
+      <ion-col>
+        <ion-label class="namePerfil">Hola</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -30,13 +37,14 @@
       <ion-label>Edad</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Telefono</ion-label>
+      <ion-label>Teléfono</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Correo</ion-label>
     </ion-item>
   </ion-list>
-  <ion-fab>
+  
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
       <ion-icon name="create"></ion-icon>
     </ion-fab-button>
