--- a/src/app/pages/menu/perfil/perfil.page.scss
+++ b/src/app/pages/menu/perfil/perfil.page.scss
@@ -3,7 +3,7 @@ ion-title{
 }
 
 .avatar{
-    margin: 15px 0 0 15px;
+    margin: 10px 0 0 10px;
     width: 120px;
     height: 120px;
 }
@@ -17,3 +17,13 @@ ion-fab-button{
     margin: 60px 240px ;
     display: flex;
 }
+
+ion-toolbar {
+    --padding-start: 16px;
+    --padding-end: 16px;
+  }
+  
+  ion-button {
+    --margin-end: 8px;
+  }
+  
