--- a/src/app/pages/loguear/loguear.page.html
+++ b/src/app/pages/loguear/loguear.page.html
@@ -7,7 +7,7 @@
 
     <ion-card-content [formGroup]="loginForm">
       <ion-item>
-        <ion-input formControlName="email" type="email" label="Correo" labelPlacement="floating" placeholder="ejemplp@gmail.cl"></ion-input>
+        <ion-input formControlName="email" type="email" label="Correo" labelPlacement="floating" placeholder="ejemplo@gmail.cl"></ion-input>
       </ion-item>
       <ion-item>
         <ion-input formControlName="pass" type="password" label="Contraseña" labelPlacement="floating" placeholder="********">
