--- a/src/app/pages/menu/historial/historial.page.html
+++ b/src/app/pages/menu/historial/historial.page.html
@@ -34,16 +34,16 @@
 
       <ion-item>
         <ion-avatar>
-          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          <img alt="Silhouette of a person's head" src="assets/pok-avatar/dratini.png" />
         </ion-avatar>
-        <ion-label>Pac-Man</ion-label>
+        <ion-label>Monkey D Luffy</ion-label>
       </ion-item>
 
       <ion-item>
         <ion-avatar>
-          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+          <img alt="Silhouette of a person's head" src="assets/pok-avatar/bullbasaur.png" />
         </ion-avatar>
-        <ion-label>Super Mario World</ion-label>
+        <ion-label>Nicolás Miranda</ion-label>
       </ion-item>
 
     </ion-list>
