creacion de recuperar contraseña

--- a/src/app/pages/loguear/loguear.page.html
+++ b/src/app/pages/loguear/loguear.page.html
@@ -17,6 +17,7 @@
 
       <div class="btns">
         <ion-button color="dark" fill="solid" shape="round" (click)="login()">Ingresar</ion-button>
+        <ion-button color="dark" fill="solid" shape="round" (click)="recuperar()" >recuperar</ion-button>
       </div>
 
       <div class="tag">
