--- a/src/app/pages/loguear/loguear.page.html
+++ b/src/app/pages/loguear/loguear.page.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="tag-2">
-        <span>No tienes una cuenta?</span><button>Registrate</button>
+        <span>No tienes una cuenta?</span><button routerLink="/registro">Registrate</button>
       </div>
 
     </ion-card-content>
