cambios en el css

--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -1,17 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-<<<<<<< HEAD
-    <ion-buttons slot="end">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>dashboard</ion-title>
-=======
->>>>>>> origin/rama_isa
     <ion-title>Conductor</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <h1>Bienvenido</h1>
+  
   <ion-tabs>
     <ion-tab-bar>
       <ion-tab-button routerLink="/historial" tab="time">
