--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
@@ -5,6 +5,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <h1>Bienvenido</h1>
+  
   <ion-tabs>
     <ion-tab-bar>
       <ion-tab-button routerLink="/historial" tab="time">
