--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.scss
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.scss
@@ -1,4 +1,7 @@
-
+ion-content {
+    --background: linear-gradient(#9dc1ff, #f4f5f8);
+    //--background: #ccc url("../../../../assets/pok-wallpaper/wall1.jpeg") no-repeat center center / cover;//
+  }
 .social-icon{
     text-align: center;   
 }
@@ -39,4 +42,14 @@ ion-card-subtitle{
     text-align: center;
     margin-top: 40px;
     color: rgba(0, 0, 0, 0.747);
+}
+
+@font-face {
+    font-family: 'Rammetto One';
+    src: url('../../../../assets/fonts/RammettoOne-Regular.ttf');//path to your font file
+}
+  
+h1{
+    margin-top: 100px;
+    font-family: 'Rammetto One';
 }
