mensaje de bienvenida, revisar

--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h1>Bienvenido</h1>
+  <h1>Bienvenido, {{ usuarioLogin }}</h1>
   
   <ion-tabs>
     <ion-tab-bar>
