--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
@@ -6,7 +6,7 @@
 
 <ion-content [fullscreen]="true">
 
-  <h1>Bienvenido</h1>
+  <h1>Bienvenido, {{ usuarioLogin }}</h1>
   
   <ion-tabs>
     <ion-tab-bar>
