--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -9,6 +9,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <h1>Bienvenido, </h1>
   <ion-tabs>
     <ion-tab-bar>
       <ion-tab-button routerLink="/historial" tab="time">
