paginas del home

--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.html
@@ -5,13 +5,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-<<<<<<< HEAD
-  <h1>Bienvenido, </h1>
-=======
-
   <h1>Bienvenido, {{ usuarioLogin }}</h1>
+  <br>
   
->>>>>>> origin/rama_lizzy
+  <ion-card>
+    <ion-img
+    src="assets/pok-wallpaper/mapa.jpeg"
+    alt=""
+    ></ion-img>
+  </ion-card>
   <ion-tabs>
     <ion-tab-bar>
       <ion-tab-button routerLink="/historial" tab="time">
