--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -5,12 +5,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-<<<<<<< HEAD
-  <h1>Bienvenido, </h1>
-=======
   <h1>Bienvenido, {{ usuarioLogin }}</h1>
-  
->>>>>>> origin/rama_lizzy
+  <!-- <ion-searchbar  placeholder="Buscar"></ion-searchbar> -->
+  <br>
+  <ion-card>
+    <ion-img
+    src="assets/pok-wallpaper/mapa.jpeg"
+    alt=""
+    ></ion-img>
+  </ion-card>
+
   <ion-tabs>
     <ion-tab-bar>
       <ion-tab-button routerLink="/historial" tab="time">
