--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.scss
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.scss
@@ -8,10 +8,10 @@ ion-content {
 ion-header{
     position: absolute;
 }
-ion-img{
-    width: 30px;
-    padding-left: 5px;
-}
+// ion-img{
+//     width: 30px;
+//     padding-left: 5px;
+// }
 ion-card {
     --ion-margin: 0;
     margin: 0 !important;
