--- a/src/app/TipoUsers/pasajero/dashboard/dashboard.page.scss
+++ b/src/app/TipoUsers/pasajero/dashboard/dashboard.page.scss
@@ -1,55 +1,62 @@
-ion-content {
-    --background: linear-gradient(#9dc1ff, #f4f5f8);
-    //--background: #ccc url("../../../../assets/pok-wallpaper/wall1.jpeg") no-repeat center center / cover;//
+.container {
+    position: relative; 
   }
-.social-icon{
-    text-align: center;   
-}
-ion-header{
+  
+  .searchbar {
     position: absolute;
-}
-// ion-img{
-//     width: 30px;
-//     padding-left: 5px;
-// }
-ion-card {
+    top: 10px; 
+    left: 50%;
+    transform: translateX(-50%); 
+    z-index: 10; 
+    width: 100%; 
+  }
+  
+  .background-img {
+    width: 100%;
+    height: 100%; 
+    
+  }
+  
+  ion-card {
     --ion-margin: 0;
     margin: 0 !important;
     padding: 0 !important;
     --ion-background-color: transparent;
     box-shadow: none !important;
-}
-.tag{
-    margin-top: 40px;
-    text-align: center;
-    span{
-        color: black;
-        font-size: 15px;
-        font-weight: normal;
-        color: black;
-    }
-}
-.btns{
-    margin-top: 25px;
-    text-align: center;
-}
-ion-card-title{
-    text-align: center;
-    margin-top: 40px;
-}
-
-ion-card-subtitle{
-    text-align: center;
-    margin-top: 40px;
-    color: rgba(0, 0, 0, 0.747);
-}
-
-@font-face {
-    font-family: 'Rammetto One';
-    src: url('../../../../assets/fonts/RammettoOne-Regular.ttf');//path to your font file
-}
+  }
   
-h1{
+  ion-content {
+    --background: linear-gradient(#9dc1ff, #f4f5f8);
+  }
+  
+  ion-card-title,
+  ion-card-subtitle {
+    text-align: center;
+  }
+  
+  ion-card-title {
+    margin-top: 40px;
+  }
+  
+  ion-card-subtitle {
+    margin-top: 20px;
+    color: rgba(0, 0, 0, 0.747);
+  }
+  
+  @font-face {
+    font-family: "Rammetto One";
+    src: url("../../../../assets/fonts/RammettoOne-Regular.ttf");
+  }
+  
+  h1 {
     margin-top: 100px;
-    font-family: 'Rammetto One';
+    font-family: "Rammetto One";
+  }
+  
+  .card-pasajero{
+    margin-top: -10px;
+    padding: 16px;
+  }
+.ion-card-center{
+    text-align: center;
 }
