--- a/src/app/pages/registro/registro.page.scss
+++ b/src/app/pages/registro/registro.page.scss
@@ -1,5 +1,10 @@
+ion-header{
+  --ion-background-color: black !important;
+}
+
+
 ion-content{
-    --ion-background-color: #FFC72B !important;
+  --ion-background-color: #FFC72B !important;
 
     img {
       display: flex;
@@ -30,6 +35,7 @@ ion-title{
 .p-abajo{
     text-align: center;
 }
+
 // .social-icon{
 //     text-align: center;   
 // }
