--- a/src/app/pages/menu/perfil/perfil.page.html
+++ b/src/app/pages/menu/perfil/perfil.page.html
@@ -22,7 +22,7 @@
         </ion-avatar>
       </ion-col>
       <ion-col>
-        <ion-label class="namePerfil">Hola</ion-label>
+        <ion-label class="namePerfil">[Nombre User]</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
