--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -1,24 +1,28 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Conductor</ion-title>
+    <ion-buttons slot="end">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Conducto Dashboard</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-tabs>
-    <ion-tab-bar>
-      <ion-tab-button routerLink="/historial" tab="time">
-        <ion-icon name="time"></ion-icon>
-        Historial
-      </ion-tab-button>
-      <ion-tab-button tab="qrCode">
-        <ion-icon name="scan-outline"></ion-icon>
-        Escaner
-      </ion-tab-button>
-      <ion-tab-button routerLink="/perfil" tab="person">
-        <ion-icon name="person"></ion-icon>
-        Perfil
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Mapa de Viaje</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <!-- Aquí va tu componente de mapa -->
+      <div id="mapa" style="height: 300px; background-color: grey;"></div>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Botones para iniciar o terminar el viaje -->
+  <ion-button expand="full" color="primary" >
+    Crear Viaje
+  </ion-button>
+  <ion-button expand="full" color="danger" >
+    Buscar Viaje
+  </ion-button>
 </ion-content>
