--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="end">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Conducto Dashboard</ion-title>
+    <ion-title>Conductor Dashboard</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,12 +13,11 @@
       <ion-card-title>Mapa de Viaje</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <!-- Aquí va tu componente de mapa -->
+      <!-- Aquí va el mapa -->
       <div id="mapa" style="height: 300px; background-color: grey;"></div>
     </ion-card-content>
   </ion-card>
 
-  <!-- Botones para iniciar o terminar el viaje -->
   <ion-button expand="full" color="primary" >
     Crear Viaje
   </ion-button>
