--- a/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
+++ b/src/app/TipoUsers/conductor/dashboard/dashboard.page.html
@@ -18,7 +18,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button expand="full" color="primary" >
+  <ion-button expand="full" color="primary" routerLink="/detalle-conductor">
     Crear Viaje
   </ion-button>
   <ion-button expand="full" color="danger" >
