--- a/src/app/TipoUsers/conductor/menu/notificaciones/notificaciones.page.html
+++ b/src/app/TipoUsers/conductor/menu/notificaciones/notificaciones.page.html
@@ -9,42 +9,41 @@
   </ion-header>
 
   <ion-content class="ion-padding">
-    <ion-item>
-      <ion-label>Filtrar por fecha</ion-label>
-      <ion-input type="date" [(ngModel)]="filterDate" (ionChange)="filterNotifications()"></ion-input>
-    </ion-item>
-
-    <ion-list>
-      <!-- Lista de notificaciones con evento para abrir el modal -->
-      <ion-item button *ngFor="let notification of filteredNotifications" (click)="openModal(notification)">
+    <!-- Lista de notificaciones -->
+    <ion-list [inset]="true">
+      <ion-item *ngFor="let notification of notifications" [button]="true" (click)="openModal(notification)">
+        <div class="unread-indicator-wrapper" slot="start">
+          <div class="unread-indicator"></div>
+        </div>
         <ion-label>
-          <h2>{{ notification.message }}</h2>
-          <p>{{ notification.date }}</p>
+          <strong>{{ notification.sender }}</strong>
+          <ion-text>{{ notification.message }}</ion-text><br />
+          <ion-note color="medium" class="ion-text-wrap">{{ notification.note }}</ion-note>
         </ion-label>
+        <div class="metadata-end-wrapper" slot="end">
+          <ion-note color="medium">{{ notification.time }}</ion-note>
+          <ion-icon color="medium" name="chevron-forward"></ion-icon>
+        </div>
       </ion-item>
     </ion-list>
+  
+    <!-- Modal para mostrar los detalles de la notificación seleccionada -->
+    <ion-modal #modal [canDismiss]="true">
+      <ng-template>
+        <ion-header>
+          <ion-toolbar>
+            <ion-title>Detalles de Notificación</ion-title>
+            <ion-buttons slot="end">
+              <ion-button (click)="closeModal()">Cerrar</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content class="ion-padding">
+          <h2>{{ selectedNotification?.sender }}</h2>
+          <p><strong>Mensaje:</strong> {{ selectedNotification?.message }}</p>
+          <p><strong>Detalles:</strong> {{ selectedNotification?.note }}</p>
+          <p><strong>Hora:</strong> {{ selectedNotification?.time }}</p>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
   </ion-content>
-
-  <!-- Modal que se abre al seleccionar una notificación -->
-  <ion-modal #modal [canDismiss]="true" [presentingElement]="page">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Detalles </ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="closeModal()">Cerrar</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <div>Direccion 1: gsfgsdgsdgsdgsdg</div>
-        <div>Direccion 2: sdgsdgss</div>
-        <br>
-        <div id="mapa" style="height: 150px; background-color: grey;"></div>
-        <!-- Mostrar detalles de la notificación seleccionada -->
-        <p><strong>Fecha:</strong> {{ selectedNotification?.date }}</p>
-        <p><strong>Mensaje:</strong> {{ selectedNotification?.message }}</p>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
-</div>
