--- a/src/app/TipoUsers/conductor/detalle-conductor/detalle-conductor.page.html
+++ b/src/app/TipoUsers/conductor/detalle-conductor/detalle-conductor.page.html
@@ -1,6 +1,8 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>detalle-conductor</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/conductor-dashboard"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
