--- a/src/app/pages/loguear/loguear.page.html
+++ b/src/app/pages/loguear/loguear.page.html
@@ -17,7 +17,7 @@
 
       <div class="btns">
         <ion-button color="dark" fill="solid" shape="round" (click)="login()">Ingresar</ion-button>
-        <ion-button color="dark" fill="solid" shape="round" >recuperar</ion-button>
+        <ion-button color="dark" fill="solid" shape="round" routerLink="/resetpass" >recuperar</ion-button>
       </div>
 
       <div class="tag">
