--- a/src/app/TipoUsers/conductor/detalle-conductor/detalle-conductor.page.html
+++ b/src/app/TipoUsers/conductor/detalle-conductor/detalle-conductor.page.html
@@ -16,13 +16,13 @@
       <ion-list>
 
         <ion-item>
-          <ion-input labelPlacement="stacked" label="Direccion actual" placeholder="Ej DuocUc, Puente alto" [(ngModel)]="direccionActual" required>
+          <ion-input labelPlacement="stacked" label="DireccionActual" placeholder="Ej DuocUc, Puente alto" [(ngModel)]="direccionActual" required>
             <ion-icon slot="start" name="map" aria-hidden="true"></ion-icon>
           </ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-input labelPlacement="stacked" label="Direccion donde iras" placeholder="Ej Av.San gabriel 334"  [(ngModel)]="direccionDestino" required>
+          <ion-input labelPlacement="stacked" label="DireccionDestino" placeholder="Ej Av.San gabriel 334"  [(ngModel)]="direccionDestino" required>
             <ion-icon slot="start" name="map" aria-hidden="true"></ion-icon>
           </ion-input>
         </ion-item>
