--- a/src/app/TipoUsers/pasajero/detalle-pasajero/detalle-pasajero.page.html
+++ b/src/app/TipoUsers/pasajero/detalle-pasajero/detalle-pasajero.page.html
@@ -5,9 +5,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">detalle-pasajero</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header>
+      <ion-item>
+        <ion-avatar slot="start">
+          <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        </ion-avatar>
+      </ion-item>
+      <ion-card-title>nombre</ion-card-title>
+      <ion-card-subtitle>celular</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      sobre mi 
+    </ion-card-content>
+  </ion-card>
 </ion-content>
